--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/vite": "^4.1.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-youtube": "^10.1.0",
     "tailwindcss-textshadow": "^2.1.3"
   },
   "devDependencies": {
